overflow fix for list

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -88,7 +88,7 @@ body {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
   background-color: #c8d3d5; 
   width: 80vw;
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 100vh; 
   margin: 0 auto;
 }
